// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render a default Button 1`] = `
<div>
  <button
    class=" svelte-17yxwjb"
    data-testid="button"
  />
</div>
`;

exports[`Button should render a disabled Button 1`] = `
<div>
  <button
    class="primary svelte-17yxwjb"
    data-testid="button"
    disabled=""
  />
</div>
`;

exports[`Button should render a primary Button 1`] = `
<div>
  <button
    class="primary svelte-17yxwjb"
    data-testid="button"
  />
</div>
`;
